--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,10 +17,12 @@
     "@mui/x-charts": "^7.28.0",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.5",
+    "chart.js": "^4.4.9",
     "date-fns": "^4.1.0",
     "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-big-calendar": "^1.18.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.3"
   },
