--- a/frontend/.env
+++ b/frontend/.env
@@ -4,3 +4,4 @@ VITE_RESERVA_API_URL=/api/reservas/
 VITE_KART_API_URL=/api/karts/
 VITE_USER_API_URL=/api/usuarios/
 VITE_COMPROBANTE_API_URL=/api/comprobantes/
+VITE_REPORTE_API_URL=/api/reportes
