--- a/config-data/api-gateway.yaml
+++ b/config-data/api-gateway.yaml
@@ -1,10 +1,26 @@
-eureka:
-  client:
-    serviceUrl: http://localhost:8761/eureka/
-
 server:
   port: 8085
-  
+
 spring:
   application:
-    name: api-gateway
+    name: gateway-server
+  cloud:
+    gateway:
+      discovery:
+        locator:
+          enabled: true
+      routes:
+        - id: ms-tarifasconfig
+          uri: lb://ms-tarifasconfig
+          predicates:
+            - Path=/api/tarifas/**, /api/configuracion/**
+        # Add routes for your other microservices here
+
+eureka:
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://eureka-server:8761/eureka/
+  instance:
+    hostname: localhost
