--- a/eureka-server/src/main/resources/application.properties
+++ b/eureka-server/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.application.name=eureka-server
-spring.cloud.config.enabled=false
-spring.config.import=optional:configserver:
+server.port=8761
+
+# Eureka is a server, doesn't need to register with itself or fetch registry (for a single node)
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
