--- a/gateway-server/src/main/resources/application.properties
+++ b/gateway-server/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 spring.application.name=gateway-server
-spring.config.import=configserver:http://localhost:8888
+spring.config.import=optional:configserver:${SPRING_CONFIG_SERVER_URI:http://localhost:8888}
