--- a/ms-tarifasconfig/src/main/resources/application.properties
+++ b/ms-tarifasconfig/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-# Microservice Configuration: ms-tarifasconfig
 spring.application.name=ms-tarifasconfig
-spring.config.import=configserver:http://localhost:8888
+spring.config.import=optional:configserver:http://config-server:8888
+management.endpoints.web.exposure.include=*
