--- a/config-data/api-gateway.yaml
+++ b/config-data/api-gateway.yaml
@@ -21,6 +21,7 @@ eureka:
     fetch-registry: true
     register-with-eureka: true
     service-url:
-      defaultZone: http://eureka-server:8761/eureka/
+      defaultZone: http://eureka-server-service:8761/eureka/
   instance:
-    hostname: localhost
+    preferIpAddress: true
+    hostname: gateway-server-service
