--- a/deployment/gateway-server-deployment.yaml
+++ b/deployment/gateway-server-deployment.yaml
@@ -20,12 +20,12 @@ spec:
           ports:
             - containerPort: 8085
           env:
-            - name: SPRING_CONFIG_IMPORT
-              value: "optional:configserver:http://config-server-service:8888"
             - name: EUREKA_CLIENT_SERVICEURL_DEFAULTZONE
               value: "http://eureka-server-service:8761/eureka/"
-            - name: SPRING_CLOUD_CONFIG_ENABLED
-              value: "false"  # This will disable config server for this instance
+            - name: EUREKA_INSTANCE_PREFERIPADDRESS
+              value: "true"
+            - name: EUREKA_INSTANCE_HOSTNAME
+              value: "gateway-server-service"
 ---
 apiVersion: v1
 kind: Service
