--- a/config-data/eureka-server.yaml
+++ b/config-data/eureka-server.yaml
@@ -1,13 +1,8 @@
 server:
   port: 8761
-
-spring:
-  application:
-    name: eureka-server
-
 eureka:
   client:
-    register-with-eureka: false
     fetch-registry: false
-  server:
-    wait-time-in-ms-when-sync-empty: 0
+    register-with-eureka: false
+    service-url:
+      default-zone: http://eureka-server-service:8761/eureka/
