--- a/config-data/ms-tarifasconfig-service.yaml
+++ b/config-data/ms-tarifasconfig-service.yaml
@@ -1,13 +1,13 @@
 server:
-  port: 8091
+  port: 0
 
 spring:
   application:
     name: ms-tarifasconfig
   datasource:
-    url: jdbc:postgresql://tingeso-entrega2.postgres.database.azure.com:5432/tarifasdb?sslmode=require
-    username: postgres
-    password: Uggm9966.
+    url: ${SPRING_DATASOURCE_URL_MS1}
+    username: ${DB_USERNAME:postgres}
+    password: ${DB_PASSWORD:postgres}
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
@@ -19,10 +19,10 @@ spring:
     show-sql: true
 
 eureka:
-  client:
-    fetch-registry: true
-    register-with-eureka: true
-    service-url:
-      defaultZone: http://eureka-server-service:8761/eureka/
   instance:
-    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+    preferIpAddress: true
+  client:
+    fetchRegistry: true
+    registerWithEureka: true
+    serviceUrl:
+      defaultZone: http://eureka-server-service:8761/eureka/
