--- a/deployment/config-server-deployment.yaml
+++ b/deployment/config-server-deployment.yaml
@@ -3,42 +3,34 @@ kind: Deployment
 metadata:
   name: config-server-deployment
   labels:
-    app: config-server
+    app: config-server-deployment
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: config-server
+      app: config-server-deployment
   template:
     metadata:
       labels:
-        app: config-server
+        app: config-server-deployment
     spec:
       containers:
       - name: config-server
         image: felipec03/config-server:latest
-        imagePullPolicy: IfNotPresent
         ports:
-          - containerPort: 8888
-        env:
-            - name: SPRING_CLOUD_CONFIG_SERVER_GIT_URI
-              value: "https://github.com/felipec03/Evaluacion2-tingeso-karting-rm"
-            - name: SPRING_CLOUD_CONFIG_SERVER_GIT_DEFAULT_LABEL
-              value: "main"
-            - name: SPRING_CLOUD_CONFIG_SERVER_GIT_SEARCH_PATHS
-              value: "config-data"
+        - containerPort: 8888
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: config-server-service
   labels:
-    app: config-server
+    app: config-server-service
 spec:
   selector:
-    app: config-server
+    app: config-server-deployment
   ports:
     - protocol: TCP
       port: 8888
       targetPort: 8888
-  type: ClusterIP
+  type: LoadBalancer
