--- a/ms-tarifasconfig/src/main/resources/application.properties
+++ b/ms-tarifasconfig/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-spring.application.name=ms-tarifasconfig
+spring.application.name=tarifas-service
+spring.config.import=configserver:http://config-server-service:8888
+spring.cloud.config.enabled=true
+spring.jpa.hibernate.ddl-auto=update
