--- a/config-data/ms-tarifasconfig-service.yaml
+++ b/config-data/ms-tarifasconfig-service.yaml
@@ -21,6 +21,7 @@ spring:
 eureka:
   instance:
     preferIpAddress: true
+    instanceId: ${spring.application.name}:${spring.application.instance_id:${random.value}}
   client:
     fetchRegistry: true
     registerWithEureka: true
