--- a/eureka-server/src/main/resources/application.properties
+++ b/eureka-server/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=eureka-server
-server.port=8761
+# server.port=8761
 spring.config.import=configserver:http://config-server-service:8888
+spring.cloud.config.enabled=true
 # Eureka is a server, doesn't need to register with itself or fetch registry (for a single node)
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
+# eureka.client.register-with-eureka=false
+# eureka.client.fetch-registry=false
