--- a/deployment/ms-tarifasconfig-deployment.yaml
+++ b/deployment/ms-tarifasconfig-deployment.yaml
@@ -2,8 +2,6 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: ms-tarifasconfig-deployment
-  labels:
-    app: ms-tarifasconfig
 spec:
   replicas: 1
   selector:
@@ -15,33 +13,28 @@ spec:
         app: ms-tarifasconfig
     spec:
       containers:
-      - name: ms-tarifasconfig
-        image: felipec03/ms-tarifasconfig:latest
-        imagePullPolicy: IfNotPresent
-        ports:
-        - containerPort: 8091
-        env:
-        - name: SPRING_CONFIG_IMPORT
-          value: "configserver:http://config-server-service:8888"
-        - name: SPRING_DATASOURCE_URL
-          valueFrom:
-            configMapKeyRef:
-              name: app-configmap
-              key: SPRING_DATASOURCE_URL_MS1
-        - name: SPRING_DATASOURCE_USERNAME
-          valueFrom:
-            configMapKeyRef:
-              name: app-configmap
-              key: SPRING_DATASOURCE_USERNAME
-        - name: SPRING_DATASOURCE_PASSWORD
-          value: "postgres"
-        # Add these new environment variables
-        - name: EUREKA_CLIENT_SERVICEURL_DEFAULTZONE
-          value: "http://eureka-server-service:8761/eureka/"
-        - name: EUREKA_CLIENT_REGISTER_WITH_EUREKA
-          value: "true"
-        - name: EUREKA_CLIENT_FETCH_REGISTRY
-          value: "true"
+        - name: ms-tarifasconfig
+          image: ms-tarifasconfig:latest
+          ports:
+            - containerPort: 8080
+          env:
+            - name: SPRING_APPLICATION_NAME
+              value: "ms-tarifasconfig"
+            - name: EUREKA_CLIENT_SERVICEURL_DEFAULTZONE
+              value: "http://eureka-server-service:8761/eureka/"
+            - name: EUREKA_CLIENT_REGISTER_WITH_EUREKA
+              value: "true"
+            - name: EUREKA_CLIENT_FETCH_REGISTRY
+              value: "true"
+            - name: SPRING_PROFILES_ACTIVE
+              value: "default"
+            # Variables para la base de datos, si las necesitas:
+            - name: SPRING_DATASOURCE_URL_MS1
+              value: "jdbc:postgresql://<host>:<port>/<db>"
+            - name: DB_USERNAME
+              value: "postgres"
+            - name: DB_PASSWORD
+              value: "postgres"
 ---
 apiVersion: v1
 kind: Service
@@ -56,4 +49,4 @@ spec:
     - protocol: TCP
       port: 8091
       targetPort: 8091
-  type: LoadBalancer
+  type: NodePort
