--- a/deployment/app-configmap.yaml
+++ b/deployment/app-configmap.yaml
@@ -7,4 +7,5 @@ data:
   EUREKA_SERVER_URL: "http://eureka-server-service:8761/eureka/"
 
   SPRING_DATASOURCE_URL_MS1: "jdbc:postgresql://postgres-db-service:5432/ms1"
+  SPRING_DATASOURCE_URL_MS2: "jdbc:postgresql://postgres-db-service:5432/ms2"
   SPRING_DATASOURCE_USERNAME: "postgres"
