--- a/ms-descuentosclientefrecuente/src/main/resources/application.properties
+++ b/ms-descuentosclientefrecuente/src/main/resources/application.properties
@@ -1,15 +1,4 @@
-spring.application.name=ms-descuentosclientefrecuente
-# configuracion microservicio descuentos-frecuentes
-server.port=8093
-
-# configuracion db (can point to the same PostgreSQL instance, tables will be specific)
-spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:5432/postgres_descuentos_frecuentes
-spring.datasource.username=${DB_USERNAME:postgres}
-spring.datasource.password=${DB_PASSWORD:postgres}
-
-# configuracion jpa
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.sql.init.mode=always
-spring.jpa.defer-datasource-initialization=true
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.application.name=ms-descuentoporpersona
+spring.config.import=configserver:http://config-server-service:8888
+spring.cloud.config.enabled=true
+spring.jpa.hibernate.ddl-auto=update
