--- a/ms-tarifadiaespecial/src/main/resources/application.properties
+++ b/ms-tarifadiaespecial/src/main/resources/application.properties
@@ -1,19 +1,4 @@
-# Microservicio: ms-tarifadisespecial
-
 spring.application.name=ms-tarifadiaespecial
-server.port=8094
-
-# Database Configuration (same as monolith for now, but could be different)
-spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:5432/postgres_tarifas
-spring.datasource.username=${DB_USERNAME:postgres}
-spring.datasource.password=${DB_PASSWORD:postgres}
-
-# JPA/Hibernate Configuration
+spring.config.import=configserver:http://config-server-service:8888
+spring.cloud.config.enabled=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-# Initialize data if data.sql is present
-spring.sql.init.mode=always
-spring.jpa.defer-datasource-initialization=true
