--- a/ms-registroreserva-comprobantepago/src/main/resources/application.properties
+++ b/ms-registroreserva-comprobantepago/src/main/resources/application.properties
@@ -1,16 +1,4 @@
-server.port=8095
-
-spring.datasource.url=jdbc:h2:mem:reservasdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-
 spring.application.name=ms-registroreserva-comprobantepago
+spring.config.import=configserver:http://config-server-service:8888
+spring.cloud.config.enabled=true
+spring.jpa.hibernate.ddl-auto=update
