--- a/deployment/ms-registroreserva-comprobantepago-deployment.yaml
+++ b/deployment/ms-registroreserva-comprobantepago-deployment.yaml
@@ -17,6 +17,8 @@ spec:
       containers:
         - name: ms-registroreserva-comprobantepago
           image: felipec03/ms-registroreserva-comprobantepago:latest 
+          imagePullPolicy: Always # ¡Muy importante si usas el tag 'latest'!
+
           ports:
             - containerPort: 8080 
           env:
