--- a/ms-racksemanal/src/main/resources/application.properties
+++ b/ms-racksemanal/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-spring.application.name=ms-racksemanal
+spring.application.name=ms-registroreserva-comprobantepago
+spring.config.import=configserver:http://config-server-service:8888
+spring.cloud.config.enabled=true
+spring.jpa.hibernate.ddl-auto=update
