--- a/deployment/postgres-deployment-service.yaml
+++ b/deployment/postgres-deployment-service.yaml
@@ -100,3 +100,5 @@ data:
     CREATE DATABASE ms2;
     CREATE DATABASE ms3;
     CREATE DATABASE ms4;
+    CREATE DATABASE ms5;
+    CREATE DATABASE ms6;
