--- a/config-data/ms-racksemanal.yaml
+++ b/config-data/ms-racksemanal.yaml
@@ -4,6 +4,18 @@ server:
 spring:
   application:
     name: ms-racksemanal
+  datasource:
+    url: ${SPRING_DATASOURCE_URL_MS6}
+    username: ${DB_USERNAME:postgres}
+    password: ${DB_PASSWORD:postgres}
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+    show-sql: true
   cloud:
     config:
       enabled: true
