--- a/ms-reportes-vueltas-personas/src/main/resources/application.properties
+++ b/ms-reportes-vueltas-personas/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=ms-reportes-vueltas-personas
+spring.config.import=configserver:http://config-server-service:8888
+spring.cloud.config.enabled=true
