--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,11 +1,26 @@
 server {
-    listen 5173;
+    listen 80; # Changed from 5173 to 80
     server_name localhost;
 
     root /usr/share/nginx/html;
-    index index.html;
+    index index.html index.htm; # Added index.htm as a fallback
 
     location / {
-        try_files $uri $uri/ /index.html;
+        try_files $uri $uri/ /index.html; # Ensures SPA routing works
     }
+
+    # Added location block to proxy API requests
+    location /api/ {
+        # 'gateway-server-service' is the Kubernetes service name for your API Gateway
+        # Port 8085 is the port your API Gateway (gateway-server) listens on (from its Dockerfile/config)
+        proxy_pass http://gateway-server-service:8085/; 
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Optional: Improve error logging and access logging
+    error_log /var/log/nginx/error.log debug;
+    access_log /var/log/nginx/access.log;
 }
