--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -13,7 +13,7 @@ server {
     location /api/ {
         # 'gateway-server-service' is the Kubernetes service name for your API Gateway
         # Port 8085 is the port your API Gateway (gateway-server) listens on (from its Dockerfile/config)
-        proxy_pass http://gateway-server-service:8085/; 
+        proxy_pass http://gateway-server-service:8085; # REMOVED TRAILING SLASH HERE
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
