--- a/config-data/gateway-server.yaml
+++ b/config-data/gateway-server.yaml
@@ -6,43 +6,58 @@ spring:
     name: gateway-server
   cloud:
     gateway:
-      routes:
-        - id: ms-tarifasconfig
-          uri: lb://ms-tarifasconfig
-          predicates:
-            - Path=/ms-tarifasconfig/**
-          filters:
-            - StripPrefix=1
-        - id: ms-descuentoporpersona
-          uri: lb://ms-descuentoporpersona
-          predicates:
-            - Path=/ms-descuentoporpersona/**
-        - id: ms-descuentosclientefrecuente
-          uri: lb://ms-descuentosclientefrecuente
-          predicates:
-            - Path=/ms-descuentosclientefrecuente/**
-        - id: ms-tarifadiaespecial
-          uri: lb://ms-tarifadiaespecial
-          predicates:
-            - Path=/ms-tarifadiaespecial/**
-        - id: ms-registroreserva-comprobantepago
-          uri: lb://ms-registroreserva-comprobantepago
-          predicates:
-            - Path=/registroreserva-comprobantepago/**
-            - Path=/api/reservas/**
-            - Path=/api/comprobantes/**
-        - id: ms-racksemanal
-          uri: lb://ms-racksemanal
-          predicates:
-            - Path=/ms-racksemanal/**
-        - id: ms-reportes-vueltas-personas
-          uri: lb://ms-reportes-vueltas-personas
-          predicates:
-            - Path=/ms-reportes-vueltas-personas/**
-      discovery:
-        locator:
-          enabled: true
-          lower-case-service-id: true
+      server: # New parent key
+        webflux: # New parent key
+          routes:
+            - id: ms-tarifasconfig
+              uri: lb://MS-TARIFASCONFIG # Uppercase
+              predicates:
+                - Path=/ms-tarifasconfig/**
+              filters:
+                - StripPrefix=1
+            - id: ms-descuentoporpersona
+              uri: lb://MS-DESCUENTOPORPERSONA # Uppercase
+              predicates:
+                - Path=/ms-descuentoporpersona/**
+              # No StripPrefix, assuming backend expects /ms-descuentoporpersona/**
+            - id: ms-descuentosclientefrecuente
+              uri: lb://MS-DESCUENTOSCLIENTEFRECUENTE # Uppercase
+              predicates:
+                - Path=/ms-descuentosclientefrecuente/**
+              # No StripPrefix, assuming backend expects /ms-descuentosclientefrecuente/**
+            - id: ms-tarifadiaespecial
+              uri: lb://MS-TARIFADIAESPECIAL # Uppercase
+              predicates:
+                - Path=/ms-tarifadiaespecial/**
+              # No StripPrefix, assuming backend expects /ms-tarifadiaespecial/**
+            - id: ms-registroreserva-comprobantepago
+              uri: lb://MS-REGISTRORESERVA-COMPROBANTEPAGO # Uppercase
+              predicates:
+                - Path=/registroreserva-comprobantepago/** # Assuming backend expects this full path
+                - Path=/api/reservas/**                  # This should match the incoming request
+                - Path=/api/comprobantes/**              # Assuming backend expects this full path
+              # NO StripPrefix filter here, as your ReservaController expects /api/reservas
+            - id: ms-racksemanal
+              uri: lb://MS-RACKSEMANAL # Uppercase
+              predicates:
+                - Path=/ms-racksemanal/**
+              # No StripPrefix, assuming backend expects /ms-racksemanal/**
+            - id: ms-reportes-vueltas-personas
+              uri: lb://MS-REPORTES-VUELTAS-PERSONAS # Uppercase
+              predicates:
+                - Path=/ms-reportes-vueltas-personas/**
+              # No StripPrefix, assuming backend expects /ms-reportes-vueltas-personas/**
+          discovery:
+            locator:
+              enabled: true
+              lower-case-service-id: true # For discovery-based routes, not explicit lb://
+
+# Logging configuration for detailed gateway routing information
+logging:
+  level:
+    org.springframework.cloud.gateway: DEBUG
+    reactor.netty.http.client: DEBUG # For HTTP client interactions from the gateway
+    org.springframework.boot.autoconfigure.web.reactive.error: DEBUG # For error handling details
 
 eureka:
   instance:
@@ -58,9 +73,10 @@ management:
   endpoints:
     web:
       exposure:
-        include: "*"
+        include: "*" # Exposes common actuators like health, info
   endpoint:
     health:
       show-details: always
-    gateway:
-      enabled: true
+    # gateway: # 'enabled: true' was removed as it's no longer supported.
+      # If you need to configure the /actuator/gateway endpoint,
+      # use 'management.endpoint.gateway.access' with appropriate values.
